--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-clean-css": "^4.2.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
+    "highlight.js": "^9.18.1",
     "karma": "^4.2.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
