--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "moli-element",
   "version": "1.0.6",
   "description": "another light weight vue.js component library",
-  "main": "lib/moli-ui.min.js",
+  "main": "lib/index.min.js",
   "dependencies": {
     "async-validator": "^3.0.4",
     "core-js": "2.6.9",
@@ -74,6 +74,7 @@
     "vue",
     "UI",
     "moli",
+    "moli-element",
     "element",
     "iview"
   ],
