--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "async-validator": "^3.0.4",
     "core-js": "2.6.9",
     "deepmerge": "^4.2.2",
+    "normalize-wheel": "^1.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "throttle-debounce": "^2.1.0",
     "webpack": "^4.39.2",
