--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,5 @@
       }
     ]
   ],
-  "plugins": [
-    "@babel/plugin-transform-runtime",
-  ]
+  "plugins": ["@babel/plugin-transform-runtime"]
 }
